--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,4 +1,14 @@
 <h1>Stupid Coaching</h1>
 
-<h2><%= @question %></h2>
-<h2><%= @answer %></h2>
+<div class="question">
+ <h2> - You:</h2>
+ <h3><%= @question %></h3>
+</div>
+
+<div class="answer">
+  <h2> - Coach:</h2>
+  <h3><%= @answer %></h3>
+</div>
+
+
+<%= link_to 'New question', '/ask' %>
