--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,7 +1,13 @@
-<h1>Questions.</h1>
-<p>Please type your question.</p>
+<div class="wrapper">
+<div class="container">
+  <h1>Questions.</h1>
+  <p>Ask your coach anything.</p>
+  <div class="form">
+    <form action="/answer">
+      <input type="text" name="question" class="form-input">
+      <input type="submit" value="Ask!" class="btn">
+    </form>
 
-<form action="/answer">
-  <input type="text" name="question">
-  <input type="submit" value="Ask!">
-</form>
+  </div>
+</div>
+</div>
